--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,11 @@ jobs:
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o fazt-linux-amd64 ./cmd/server
           tar -czvf fazt-${{ github.ref_name }}-linux-amd64.tar.gz fazt-linux-amd64
 
+      - name: Build Linux arm64
+        run: |
+          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o fazt-linux-arm64 ./cmd/server
+          tar -czvf fazt-${{ github.ref_name }}-linux-arm64.tar.gz fazt-linux-arm64
+
       - name: Build macOS arm64
         run: |
           CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -o fazt-darwin-arm64 ./cmd/server
@@ -41,6 +46,7 @@ jobs:
         with:
           files: |
             fazt-*-linux-amd64.tar.gz
+            fazt-*-linux-arm64.tar.gz
             fazt-*-darwin-arm64.tar.gz
             fazt-*-darwin-amd64.tar.gz
           generate_release_notes: true
