--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,22 +23,22 @@ jobs:
 
       - name: Build Linux amd64
         run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o fazt-linux-amd64 ./cmd/server
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s -X main.Version=${{ github.ref_name }}" -o fazt-linux-amd64 ./cmd/server
           tar -czvf fazt-${{ github.ref_name }}-linux-amd64.tar.gz fazt-linux-amd64
 
       - name: Build Linux arm64
         run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o fazt-linux-arm64 ./cmd/server
+          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -ldflags="-w -s -X main.Version=${{ github.ref_name }}" -o fazt-linux-arm64 ./cmd/server
           tar -czvf fazt-${{ github.ref_name }}-linux-arm64.tar.gz fazt-linux-arm64
 
       - name: Build macOS arm64
         run: |
-          CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -o fazt-darwin-arm64 ./cmd/server
+          CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -ldflags="-w -s -X main.Version=${{ github.ref_name }}" -o fazt-darwin-arm64 ./cmd/server
           tar -czvf fazt-${{ github.ref_name }}-darwin-arm64.tar.gz fazt-darwin-arm64
 
       - name: Build macOS amd64
         run: |
-          CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o fazt-darwin-amd64 ./cmd/server
+          CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -ldflags="-w -s -X main.Version=${{ github.ref_name }}" -o fazt-darwin-amd64 ./cmd/server
           tar -czvf fazt-${{ github.ref_name }}-darwin-amd64.tar.gz fazt-darwin-amd64
 
       - name: Create Release
