feat: v0.6.0 - Cartridge Architecture & Interactive CLI

--- a/config.example.json
+++ b/config.example.json
@@ -1,14 +1,10 @@
 {
   "server": {
     "port": "4698",
-    "domain": "https://cc.toolbomber.com",
+    "domain": "https://fazt.sh",
     "env": "production"
   },
-  "database": {
-    "path": "~/.config/cc/data.db"
-  },
   "auth": {
-    "enabled": true,
     "username": "admin",
     "password_hash": "$2a$12$EXAMPLE_HASH_REPLACE_WITH_REAL_HASH"
   },
