--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,20 @@ jobs:
         with:
           go-version: '1.24'
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Build Admin SPA
+        run: |
+          cd admin
+          npm install
+          npm run build
+          cd ..
+          rm -rf internal/assets/system/admin
+          cp -r admin/dist internal/assets/system/admin
+
       - name: Build Linux amd64
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s -X main.Version=${{ github.ref_name }}" -o fazt ./cmd/server
