--- a/admin/package.json
+++ b/admin/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
+    "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.90.12",
     "lucide-react": "^0.556.0",
+    "preline": "^3.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
