--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.90.12",
+    "apexcharts": "^5.3.6",
     "lucide-react": "^0.556.0",
     "preline": "^3.2.3",
     "react": "^19.2.0",
