feat: create unified AGENTS.md with multi-agent symlinks
- Move CLAUDE.md to knowledge-base/AGENTS.md (single source of truth)
- Symlink root CLAUDE.md and AGENTS.md to knowledge-base/AGENTS.md
- Create skill symlinks in .claude/skills/ and .agents/skills/
- Remove .claude/commands/ directory (deprecated)
- Clean up agent-browser from .agents/skills/ (manage globally instead)
- Update .gitignore to exclude symlink directories
- Part of Plan 39: Unified Skills Architecture

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ koder/rough.md
 koder/scratch.md
 /server
 /fazt-*
-!.claude/commands/fazt-*.md
 cc-server
 cc-server-*
 *.exe
@@ -66,3 +65,9 @@ servers/
 system/
 stdlib/node_modules
 .tickets/
+
+# Agent skill symlinks (sources tracked in knowledge-base/)
+.claude/skills/
+.agents/skills/
+.codex/skills/
+.opencode/skills/
